--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hochzeit von Julia & Max</title>
+    <title>Hochzeit von Iris & Calvin</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -39,12 +39,12 @@
 <body>
     <header>
         <h1>Willkommen zu unserer Hochzeit!</h1>
-        <p>Julia & Max</p>
+        <p>Iris & Calvin</p>
     </header>
 
     <section>
         <h2>Unser großer Tag</h2>
-        <p>Am 25. Mai 2025 feiern wir unsere Hochzeit. Wir können es kaum erwarten, diesen besonderen Moment mit euch zu teilen!</p>
+        <p>Am 06. September 2025 feiern wir unsere Hochzeit. Wir können es kaum erwarten, diesen besonderen Moment mit euch zu teilen!</p>
     </section>
 
     <section>
@@ -54,7 +54,7 @@
 
     <section>
         <h2>RSVP</h2>
-        <p>Bitte bestätigt eure Teilnahme bis zum 1. Mai 2025.</p>
+        <p>Bitte bestätigt eure Teilnahme bis zum 30. März 2025.</p>
     </section>
 
     <footer>
