--- a/test.html
+++ b/test.html
@@ -49,7 +49,7 @@
 
     <section>
         <h2>Ort der Feier</h2>
-        <p>Die Feier findet in der wunderschönen "Schlosskapelle" in Berlin statt.</p>
+        <p>Die Feier findet am wunderschönen Cobenzl statt.</p>
     </section>
 
     <section>
