--- a/test.html
+++ b/test.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            background-color: #f3f4f6;
+            background-color: #6495ED;
             color: #333;
             margin: 0;
             padding: 0;
