--- a/test.html
+++ b/test.html
@@ -7,13 +7,13 @@
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            background-color: #6495ED;
+            background-color: #F7F9EF;
             color: #333;
             margin: 0;
             padding: 0;
         }
         header {
-            background-color: #ff7f7f;
+            background-color: #6495ED;
             color: white;
             padding: 2em;
             text-align: center;
