--- a/test.html
+++ b/test.html
@@ -9,11 +9,12 @@
 </head>
 <body>
     <!-- Passwortschutz -->
-    <div id="login-container">
-        <h2>Bitte gib das Passwort ein:</h2>
+     <div id="login-container">
+        <h2>Willkommen zur Hochzeit von Iris & Calvin</h2>
+        <p>Bitte gib das Passwort ein, um fortzufahren:</p>
         <input type="password" id="password-input" placeholder="Passwort eingeben">
         <button onclick="checkPassword()">Login</button>
-        <p id="error-message" style="display:none; color:red;">Falsches Passwort!</p>
+        <p id="error-message" style="color: red; display: none;">Falsches Passwort!</p>
     </div>
 
     <!-- Hauptinhalt (wird erst nach Login sichtbar) -->
