--- a/test.html
+++ b/test.html
@@ -4,53 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hochzeit von Iris & Calvin</title>
-    <style>
-        /* Passwortschutz - Login-Container zentrieren */
-        #login-container {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            height: 100vh; /* Vollbildhöhe */
-            text-align: center;
-            background-color: #f4f4f4;
-        }
-
-        #login-container h2 {
-            margin-bottom: 20px;
-        }
-
-        #login-container input {
-            margin-bottom: 20px;
-            padding: 10px;
-            font-size: 1em;
-            border-radius: 5px;
-            border: 1px solid #ccc;
-        }
-
-        #login-container button {
-            padding: 10px 20px;
-            background-color: #3399ff; /* Hellblau */
-            color: white;
-            font-size: 1em;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        #login-container button:hover {
-            background-color: #0077cc; /* Dunkleres Blau */
-        }
-
-        #error-message {
-            margin-top: 10px;
-            font-size: 1em;
-            color: red;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
     <script src="scripts.js" defer></script>
 </head>
 <body>
+
     <!-- Passwortschutz -->
     <div id="login-container">
         <h2>Willkommen zur Hochzeit von Iris & Calvin</h2>
