--- a/test.html
+++ b/test.html
@@ -12,10 +12,10 @@
     <!-- Passwortschutz -->
     <div id="login-container">
         <h2>Willkommen zur Hochzeit von Iris & Calvin</h2>
-        <p>Bitte gib den erhalten Code ein, um fortzufahren:</p>
+        <p>Bitte gib den erhaltenen Code ein, um fortzufahren:</p>
         <input type="password" id="password-input" placeholder="Code eingeben">
         <button onclick="checkPassword()">Login</button>
-        <p id="error-message" style="color: red; display: none;">Leider ist der Code falsch! Bitte versuche es nocheinmal.</p>
+        <p id="error-message" style="color: red; display: none;">Leider ist der Code falsch! Bitte versuche es noch einmal.</p>
     </div>
 
     <!-- Hauptinhalt (wird erst nach Login sichtbar) -->
