--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100..900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Moon+Dance&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hochzeit Iris & Calvin</title>
+    <title>Iris & Calvin - Wir heiraten!</title>
+    <meta property="og:description" content="Hier findest du alle Infos zur Feier!">
+    <meta property="og:image" content="https://raw.githubusercontent.com/Iris-Calvin/Wir-heiraten-2025/blob/main/src/assets/dark_blue_bright_red.png"
   </head>
   <body>
     <div id="root"></div>
