--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Iris & Calvin - Wir heiraten!</title>
     <meta property="og:description" content="Hier findest du alle Infos zur Feier!">
-    <meta property="og:image" content="https://raw.githubusercontent.com/Iris-Calvin/Wir-heiraten-2025/blob/main/src/assets/dark_blue_bright_red.png"
+    <meta property="og:image" content="https://raw.githubusercontent.com/Iris-Calvin/Wir-heiraten-2025/blob/main/src/assets/dark_blue_bright_red.png">
   </head>
   <body>
     <div id="root"></div>
